--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-argparse==1.2.1
+appdirs==1.4.2
+colorama==0.3.7
+cycler==0.10.0
+functools32==3.2.3.post2
+matplotlib==2.0.0
 numpy==1.10.1
-wsgiref==0.1.2
+packaging==16.8
+pyparsing==2.1.10
+python-dateutil==2.6.0
+pytz==2016.10
+six==1.10.0
+subprocess32==3.2.7
